# Engineering-Experiment-with-AI

./: .env.sample  DockerFile  MakeFile  README.md  docker-compose.yml  main.py  pyproject.toml
apps/api/: pyproject.toml
apps/api/src/api/: app.py
apps/api/src/api/core/: config.py
notebooks/: presetup.ipynb
src/: app.py
src/core/: config.py
