[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Raman0925", email = "ramankumarkannaujiya@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.0",
    "google-genai>=1.65.0",
    "groq>=1.0.0",
    "openai>=2.24.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "uvicorn>=0.41.0",
]

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
shared = {workspace = true}

[tool.hatch.build.targets.wheel]
packages= ["src/api"]

[tool.hatch.build.targets.sdist]
include = ["src/", "tests/", "README.md"]
